updating requirement.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 absl-py==0.12.0
 alabaster==0.7.12
-# argon2-cffi @ file:///C:/ci/argon2-cffi_1613037829118/work
+argon2-cffi @ file:///C:/ci/argon2-cffi_1613037829118/work
 astor==0.8.0
 astroid @ file:///C:/ci/astroid_1613501147567/work
 astunparse==1.6.3
